force-app/main/default/objects/LT_Payment_Request__c/LT_Payment_Request__c.object-meta.xml
<CustomObject>
    <description>Solicitacao de Pagamento - LogiTrack Operations 360.</description>
    <label>Solicitacao de Pagamento</label>
    <nameField>
        <displayFormat>SOL-{000000}</displayFormat>
        <label>Codigo da Solicitacao</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solicitacoes de Pagamento</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>