force-app/main/default/objects/LT_Payment_Request__c/fields/LT_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>LT_Amount_Paid__c</fullName>
    <description>Soma dos pagamentos confirmados desta solicitacao.</description>
    <label>Valor Pago</label>
    <summarizedField>LT_Payment__c.LT_Amount__c</summarizedField>
    <summaryForeignKey>LT_Payment__c.LT_Payment_Request__c</summaryForeignKey>
    <summaryOperation>Sum</summaryOperation>
    <summaryFilterItems>
        <field>LT_Payment__c.LT_Status__c</field>
        <operation>equals</operation>
        <value>Confirmado</value>
    </summaryFilterItems>
    <type>Summary</type>
</CustomField>