force-app/main/default/objects/LT_Payment_Request__c/fields/LT_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>LT_Approval_Date__c</fullName>
    <description>Data em que a solicitacao foi aprovada.</description>
    <label>Data de Aprovacao</label>
    <type>Date</type>
</CustomField>