force-app/main/default/objects/LT_Payment_Request__c/fields/LT_Approval_Level__c.field-meta.xml
<CustomField>
    <fullName>LT_Approval_Level__c</fullName>
    <description>Nivel de alcada exigido pelo valor solicitado.</description>
    <label>Alcada de Aprovacao</label>
    <formula>IF(BLANKVALUE(LT_Amount__c, 0) &gt;= 10000, "Diretoria", IF(BLANKVALUE(LT_Amount__c, 0) &gt;= 2000, "Gerencia", "Coordenacao"))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Text</type>
</CustomField>