force-app/main/default/objects/LT_Payment_Request__c/fields/LT_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>LT_Approved_By__c</fullName>
    <description>Usuario que aprovou a solicitacao.</description>
    <label>Aprovado Por</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Solicitacoes de Pagamento Aprovadas</relationshipLabel>
    <relationshipName>LT_Approved_Payment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>