force-app/main/default/objects/LT_Payment_Request__c/fields/LT_Bank_Details__c.field-meta.xml
<CustomField>
    <fullName>LT_Bank_Details__c</fullName>
    <description>Banco, agencia e conta do favorecido.</description>
    <label>Dados Bancarios</label>
    <type>Text</type>
    <length>140</length>
</CustomField>