force-app/main/default/objects/LT_Payment_Request__c/fields/LT_Base__c.field-meta.xml
<CustomField>
    <fullName>LT_Base__c</fullName>
    <description>Base ou unidade relacionada ao pagamento.</description>
    <label>Base / Unidade</label>
    <referenceTo>LT_Logistics_Unit__c</referenceTo>
    <relationshipLabel>Solicitacoes de Pagamento</relationshipLabel>
    <relationshipName>LT_Payment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>