force-app/main/default/objects/LT_Payment_Request__c/fields/LT_Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>LT_Cost_Center__c</fullName>
    <description>Area a que a despesa e alocada.</description>
    <label>Centro de Custo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Operacao - Ultima Milha</fullName>
            </value>
            <value>
                <fullName>Operacao - Primeira Milha</fullName>
            </value>
            <value>
                <fullName>Comercial</fullName>
            </value>
            <value>
                <fullName>Cadastro / Frota</fullName>
            </value>
            <value>
                <fullName>SAC</fullName>
            </value>
            <value>
                <fullName>Administrativo / RH</fullName>
            </value>
            <value>
                <fullName>Financeiro</fullName>
            </value>
            <value>
                <fullName>Expansao / Novas Bases</fullName>
            </value>
            <value>
                <fullName>Diretoria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>