force-app/main/default/objects/LT_Payment_Request__c/fields/LT_Description__c.field-meta.xml
<CustomField>
    <fullName>LT_Description__c</fullName>
    <description>Justificativa e detalhamento da solicitacao.</description>
    <label>Justificativa</label>
    <type>LongTextArea</type>
    <length>8000</length>
</CustomField>