force-app/main/default/objects/LT_Payment_Request__c/fields/LT_Driver__c.field-meta.xml
<CustomField>
    <fullName>LT_Driver__c</fullName>
    <description>Motorista beneficiario do pagamento.</description>
    <label>Motorista</label>
    <referenceTo>LT_Driver__c</referenceTo>
    <relationshipLabel>Solicitacoes de Pagamento</relationshipLabel>
    <relationshipName>LT_Payment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>