force-app/main/default/objects/LT_Payment_Request__c/fields/LT_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>LT_Due_Date__c</fullName>
    <description>Data limite para o pagamento.</description>
    <label>Data de Vencimento</label>
    <required>true</required>
    <type>Date</type>
</CustomField>