force-app/main/default/objects/LT_Payment_Request__c/fields/LT_Fully_Paid__c.field-meta.xml
<CustomField>
    <fullName>LT_Fully_Paid__c</fullName>
    <description>Verdadeiro quando o valor pago cobre o valor solicitado.</description>
    <label>Quitada</label>
    <formula>AND(BLANKVALUE(LT_Amount__c, 0) &gt; 0, BLANKVALUE(LT_Amount_Paid__c, 0) &gt;= LT_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Checkbox</type>
</CustomField>