force-app/main/default/objects/LT_Payment_Request__c/fields/LT_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>LT_Invoice_Number__c</fullName>
    <description>Numero da NF ou documento de suporte.</description>
    <label>Nota Fiscal / Documento</label>
    <type>Text</type>
    <length>40</length>
</CustomField>