force-app/main/default/objects/LT_Payment_Request__c/fields/LT_Is_Overdue__c.field-meta.xml
<CustomField>
    <fullName>LT_Is_Overdue__c</fullName>
    <description>Solicitacao em aberto com vencimento no passado.</description>
    <label>Vencida</label>
    <formula>AND(NOT(ISPICKVAL(LT_Status__c, "Paga")), NOT(ISPICKVAL(LT_Status__c, "Reprovada")), NOT(ISPICKVAL(LT_Status__c, "Cancelada")), NOT(ISBLANK(LT_Due_Date__c)), LT_Due_Date__c &lt; TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Checkbox</type>
</CustomField>