force-app/main/default/objects/LT_Payment_Request__c/fields/LT_Last_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>LT_Last_Payment_Date__c</fullName>
    <description>Data do pagamento mais recente.</description>
    <label>Ultimo Pagamento</label>
    <summarizedField>LT_Payment__c.LT_Payment_Date__c</summarizedField>
    <summaryForeignKey>LT_Payment__c.LT_Payment_Request__c</summaryForeignKey>
    <summaryOperation>Max</summaryOperation>
    <type>Summary</type>
</CustomField>