force-app/main/default/objects/LT_Payment_Request__c/fields/LT_Loss_Claim__c.field-meta.xml
<CustomField>
    <fullName>LT_Loss_Claim__c</fullName>
    <description>Extravio cujo ressarcimento gera este pagamento.</description>
    <label>Extravio</label>
    <referenceTo>LT_Loss_Claim__c</referenceTo>
    <relationshipLabel>Solicitacoes de Pagamento</relationshipLabel>
    <relationshipName>LT_Payment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>