force-app/main/default/objects/LT_Payment_Request__c/fields/LT_Manifest__c.field-meta.xml
<CustomField>
    <fullName>LT_Manifest__c</fullName>
    <description>Romaneio que originou o pagamento ao motorista.</description>
    <label>Romaneio</label>
    <referenceTo>LT_Manifest__c</referenceTo>
    <relationshipLabel>Solicitacoes de Pagamento</relationshipLabel>
    <relationshipName>LT_Payment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>