force-app/main/default/objects/LT_Payment_Request__c/fields/LT_Payee_Document__c.field-meta.xml
<CustomField>
    <fullName>LT_Payee_Document__c</fullName>
    <description>Documento do favorecido.</description>
    <label>CPF/CNPJ do Favorecido</label>
    <type>Text</type>
    <length>20</length>
</CustomField>