force-app/main/default/objects/LT_Payment_Request__c/fields/LT_Payee_Name__c.field-meta.xml
<CustomField>
    <fullName>LT_Payee_Name__c</fullName>
    <description>Nome do favorecido do pagamento.</description>
    <label>Favorecido</label>
    <required>true</required>
    <type>Text</type>
    <length>120</length>
</CustomField>