force-app/main/default/objects/LT_Payment_Request__c/fields/LT_Payee_Pix_Key__c.field-meta.xml
<CustomField>
    <fullName>LT_Payee_Pix_Key__c</fullName>
    <description>Chave PIX do favorecido.</description>
    <label>Chave PIX</label>
    <type>Text</type>
    <length>80</length>
</CustomField>