force-app/main/default/objects/LT_Payment_Request__c/fields/LT_Payment_Count__c.field-meta.xml
<CustomField>
    <fullName>LT_Payment_Count__c</fullName>
    <description>Numero de pagamentos lancados para esta solicitacao.</description>
    <label>Qtd. Pagamentos</label>
    <summaryForeignKey>LT_Payment__c.LT_Payment_Request__c</summaryForeignKey>
    <summaryOperation>Count</summaryOperation>
    <type>Summary</type>
</CustomField>