force-app/main/default/objects/LT_Payment_Request__c/fields/LT_Priority__c.field-meta.xml
<CustomField>
    <fullName>LT_Priority__c</fullName>
    <description>Urgencia do pagamento.</description>
    <label>Prioridade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baixa</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
                <default>true</default>
                <label>Normal</label>
            </value>
            <value>
                <fullName>Alta</fullName>
            </value>
            <value>
                <fullName>Urgente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>