force-app/main/default/objects/LT_Payment_Request__c/fields/LT_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>LT_Rejection_Reason__c</fullName>
    <description>Motivo informado na reprovacao.</description>
    <label>Motivo da Reprovacao</label>
    <type>LongTextArea</type>
    <length>4000</length>
</CustomField>