force-app/main/default/objects/LT_Payment_Request__c/fields/LT_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>LT_Request_Date__c</fullName>
    <description>Data de abertura da solicitacao.</description>
    <label>Data da Solicitacao</label>
    <required>true</required>
    <defaultValue>TODAY()</defaultValue>
    <type>Date</type>
</CustomField>