force-app/main/default/objects/LT_Payment_Request__c/fields/LT_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>LT_Request_Type__c</fullName>
    <description>Natureza do pagamento solicitado.</description>
    <label>Tipo de Solicitacao</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pagamento a Embarcador (Ressarcimento)</fullName>
            </value>
            <value>
                <fullName>Pagamento a Motorista (Romaneio)</fullName>
            </value>
            <value>
                <fullName>Folha de Pagamento (Funcionarios)</fullName>
            </value>
            <value>
                <fullName>Insumos para Base/Escritorio</fullName>
            </value>
            <value>
                <fullName>Verba para Viagem/Projeto</fullName>
            </value>
            <value>
                <fullName>Abertura de Galpao/Nova Base</fullName>
            </value>
            <value>
                <fullName>Reembolso de Despesa</fullName>
            </value>
            <value>
                <fullName>Fornecedor / Prestador de Servico</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>