force-app/main/default/objects/LT_Payment_Request__c/fields/LT_Requested_By__c.field-meta.xml
<CustomField>
    <fullName>LT_Requested_By__c</fullName>
    <description>Usuario que abriu a solicitacao.</description>
    <label>Solicitado Por</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Solicitacoes de Pagamento Abertas</relationshipLabel>
    <relationshipName>LT_Opened_Payment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>