force-app/main/default/objects/LT_Payment_Request__c/fields/LT_Shipper__c.field-meta.xml
<CustomField>
    <fullName>LT_Shipper__c</fullName>
    <description>Embarcador beneficiario do pagamento.</description>
    <label>Embarcador</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Solicitacoes de Pagamento</relationshipLabel>
    <relationshipName>LT_Payment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>