force-app/main/default/objects/LT_Payment_Request__c/fields/LT_Status_Text__c.field-meta.xml
<CustomField>
    <fullName>LT_Status_Text__c</fullName>
    <description>Valor textual do status, para uso em automacoes.</description>
    <label>Status (Texto)</label>
    <formula>TEXT(LT_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Text</type>
</CustomField>