force-app/main/default/objects/LT_Payment_Request__c/validationRules/LT_PR_Amount_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_PR_Amount_Positive</fullName>
    <active>true</active>
    <description>O valor solicitado deve ser maior que zero.</description>
    <errorConditionFormula>BLANKVALUE(LT_Amount__c, 0) &lt;= 0</errorConditionFormula>
    <errorDisplayField>LT_Amount__c</errorDisplayField>
    <errorMessage>Informe um valor solicitado maior que zero.</errorMessage>
</ValidationRule>