force-app/main/default/objects/LT_Payment_Request__c/validationRules/LT_PR_Approved_Requires_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_PR_Approved_Requires_Date</fullName>
    <active>true</active>
    <description>Solicitacao aprovada ou paga exige data de aprovacao.</description>
    <errorConditionFormula>AND(OR(ISPICKVAL(LT_Status__c, "Aprovada"), ISPICKVAL(LT_Status__c, "Paga")), ISBLANK(LT_Approval_Date__c))</errorConditionFormula>
    <errorDisplayField>LT_Approval_Date__c</errorDisplayField>
    <errorMessage>Informe a data de aprovacao.</errorMessage>
</ValidationRule>