force-app/main/default/objects/LT_Payment_Request__c/validationRules/LT_PR_Driver_Type_Requires_Driver.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_PR_Driver_Type_Requires_Driver</fullName>
    <active>true</active>
    <description>Pagamento a motorista exige o motorista e o romaneio.</description>
    <errorConditionFormula>AND(ISPICKVAL(LT_Request_Type__c, "Pagamento a Motorista (Romaneio)"), OR(ISBLANK(LT_Driver__c), ISBLANK(LT_Manifest__c)))</errorConditionFormula>
    <errorDisplayField>LT_Driver__c</errorDisplayField>
    <errorMessage>Informe o motorista e o romaneio para pagamentos a motorista.</errorMessage>
</ValidationRule>