force-app/main/default/objects/LT_Payment_Request__c/validationRules/LT_PR_Justification_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_PR_Justification_Required</fullName>
    <active>true</active>
    <description>Solicitacoes exigem justificativa antes de sair do rascunho.</description>
    <errorConditionFormula>AND(NOT(ISPICKVAL(LT_Status__c, "Rascunho")), ISBLANK(LT_Description__c))</errorConditionFormula>
    <errorDisplayField>LT_Description__c</errorDisplayField>
    <errorMessage>Preencha a justificativa antes de submeter a solicitacao.</errorMessage>
</ValidationRule>