force-app/main/default/objects/LT_Payment_Request__c/validationRules/LT_PR_Paid_Not_Over_Requested.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_PR_Paid_Not_Over_Requested</fullName>
    <active>true</active>
    <description>O valor pago nao pode exceder o valor solicitado.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(LT_Amount_Paid__c)), NOT(ISBLANK(LT_Amount__c)), LT_Amount_Paid__c &gt; LT_Amount__c)</errorConditionFormula>
    <errorDisplayField>LT_Amount__c</errorDisplayField>
    <errorMessage>O total pago ultrapassa o valor solicitado. Ajuste a solicitacao ou os pagamentos.</errorMessage>
</ValidationRule>