force-app/main/default/objects/LT_Payment_Request__c/validationRules/LT_PR_Rejected_Requires_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_PR_Rejected_Requires_Reason</fullName>
    <active>true</active>
    <description>Solicitacao reprovada exige o motivo da reprovacao.</description>
    <errorConditionFormula>AND(ISPICKVAL(LT_Status__c, "Reprovada"), ISBLANK(LT_Rejection_Reason__c), NOT(ISCHANGED(LT_Status__c)))</errorConditionFormula>
    <errorDisplayField>LT_Rejection_Reason__c</errorDisplayField>
    <errorMessage>Informe o motivo da reprovacao.</errorMessage>
</ValidationRule>