force-app/main/default/objects/LT_Payment_Request__c/validationRules/LT_PR_Shipper_Type_Requires_Shipper.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_PR_Shipper_Type_Requires_Shipper</fullName>
    <active>true</active>
    <description>Ressarcimento a embarcador exige o embarcador.</description>
    <errorConditionFormula>AND(ISPICKVAL(LT_Request_Type__c, "Pagamento a Embarcador (Ressarcimento)"), ISBLANK(LT_Shipper__c))</errorConditionFormula>
    <errorDisplayField>LT_Shipper__c</errorDisplayField>
    <errorMessage>Informe o embarcador para pagamentos de ressarcimento.</errorMessage>
</ValidationRule>