force-app/main/default/objects/LT_Payment_Request__c/listViews/A_Pagar.listView-meta.xml
<ListView>
    <fullName>A_Pagar</fullName>
    <columns>NAME</columns>
    <columns>LT_Payee_Name__c</columns>
    <columns>LT_Amount__c</columns>
    <columns>LT_Amount_Paid__c</columns>
    <columns>LT_Balance__c</columns>
    <columns>LT_Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LT_Status__c</field>
        <operation>equals</operation>
        <value>Aprovada</value>
    </filters>
    <label>Aprovadas a Pagar</label>
</ListView>