force-app/main/default/objects/LT_Payment_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LT_Request_Type__c</columns>
    <columns>LT_Payee_Name__c</columns>
    <columns>LT_Amount__c</columns>
    <columns>LT_Status__c</columns>
    <columns>LT_Cost_Center__c</columns>
    <columns>LT_Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas</label>
</ListView>