force-app/main/default/objects/LT_Payment_Request__c/listViews/Em_Aprovacao.listView-meta.xml
<ListView>
    <fullName>Em_Aprovacao</fullName>
    <columns>NAME</columns>
    <columns>LT_Request_Type__c</columns>
    <columns>LT_Payee_Name__c</columns>
    <columns>LT_Amount__c</columns>
    <columns>LT_Approval_Level__c</columns>
    <columns>LT_Priority__c</columns>
    <columns>LT_Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LT_Status__c</field>
        <operation>equals</operation>
        <value>Em Aprovacao</value>
    </filters>
    <label>Aguardando Aprovacao</label>
</ListView>